# fse_unb_trabalho

./: .gitignore  README.md  main.py  pyproject.toml  requirements-pi.txt  requirements.txt
semaforo/: __init__.py  botoes.py  model1.py  model2.py  pins.py  protocolo.py  rpi_io.py  sensores.py  servidor_central.py  servidor_distribuido.py
