[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "emb-trab1-semaforo"
version = "1.0.0"
description = "Controle de semáforos Modelo 1 (3 LEDs) e Modelo 2 (3 bits) na Raspberry Pi"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "gpiozero>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["semaforo*"]

# Pylance/Pyright: usar o venv do projeto para resolver imports (ex.: gpiozero).
[tool.pyright]
venvPath = "."
venv = ".venv"
