[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "emb-trab1-semaforo"
version = "1.0.0"
description = "Controle de semáforos Modelo 1 (3 LEDs) e Modelo 2 (3 bits) na Raspberry Pi"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "RPi.GPIO>=0.7.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["semaforo*"]

# Pylance: usar o venv do projeto (na Pi instala RPi.GPIO).
[tool.pyright]
venvPath = "."
venv = ".venv"
